# baywatch

./: .gitignore  app.py  bay.py  categories.json  categories_short.json  conf.json  license.md  pyproject.toml  readme.md  requirements.txt  setup.py  tpb_categories.py
baywatch/: app.py  bay.py  config_control.py  version.py
baywatch/data/: conf.json  mirrors.txt  trackers.txt
